namespace ApplicationCore.Domain.Enums;

public enum EstadoMaterial
{
    Disponible,
    EnMantenimiento,
    Roto
}
