namespace ApplicationCore.Domain.Enums;

public enum EstadoPrestamo
{
    Pendiente,
    Activo,
    Devuelto,
    Retrasado
}
