namespace ApplicationCore.Domain.Enums;

public enum RolUsuario
{
    Administrador,
    Usuario
}
